<package>
	<name>pgr_camera</name>
	<version>1.2.4</version>
	<description>
		A ROS node to provide access to Point Grey Research cameras, using the
		FlyCapture2 SDK API
		Acknowledgement: This package is based largely on the prosilica_camera package,
		by Patrick Mihelich (http://www.ros.org/wiki/prosilica_camera).
	</description>
	<author>Patrick Bouffard</author>
	<maintainer email="asdf@gmail.com">asdf</maintainer>
	<license>BSD</license>
	<url>http://ros.org/wiki/pgr_camera</url>
	<export>
		<rosdoc config="rosdoc.yaml" />
	</export>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>message_runtime</run_depend>
	<buildtool_depend>catkin</buildtool_depend>
</package>


